===============================================================================
    $Id: CHANGELOG,v 1.26 2004/11/09 07:05:06 mike Exp $
    LIBNET 1.1 (c) 1998 - 2004 Mike D. Schiffman <mike@infonexus.com>
                               http://www.packetfactory.net/libnet
===============================================================================


- 1.1.5

    - Pointers not cleared after free could lead to double deallocation. (Stefanos Harhalakis)
      http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=534437
    - Auto* changes to work on OS X from git checkout.
    - Update autobuild endianness and unaligned checks. (Mike Frysinger)
    - Adjust autobuild so libnet can build out-of-tree. (Robin Getz/Mike Frysinger)

- 1.1.4

    - Strip CRLF from files not in win32/ (Robert Scheck)
    - libnet was using HAVE_CONFIG_H in a public header in order to deal with platform types.
      https://bugzilla.redhat.com/show_bug.cgi?id=501633
    - Patch to libnet.h.in for compilation on HURD (David Paleino)

- 1.1.3

Merged 1.1.3 release candidate from packet factory, 1.1.2, debian patches, and
my own fixes, including bugs causing memory corruption:

    - Fixed various errors, including memory corruption, when IPv4 options are
      modified.  (Sam Roberts)
    - Convert from latin-1 to utf-8, from Robert Scheck. (Sam Roberts)
    - Fixed doxygen errors and warnings, and added a deveoper script to prepare
      libnet. (Sam Roberts)
    - Removed CVS crud, again. (Sam Roberts)
    - Applied autotools cleanup patch from Stefanos. (Sam Roberts)
    - Applied patch from Stefanos to remove the autotools ephemera that leaked
      back in. (Sam Roberts)
    - Patches from Stefanos. (Sam Roberts)
    - Updated .so revision to be one backwards compatible interface after
      1.1.2.1-fork's. (Sam Roberts)
    - Fix for debian bug# 418975, IPv6 wasn't updating ip_offset. See
      http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=418975 and sample