@@ -7,6 +7,7 @@
 
 - 1.1.5
 
+    - Configure switch to install samples (Mike Frysinger)
     - Pointers not cleared after free could lead to double deallocation. (Stefanos Harhalakis)
       http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=534437
     - Auto* changes to work on OS X from git checkout.
